[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Cannon.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Cannon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.00959

[sub_resource type="CircleShape2D" id=2]
radius = 10.8926

[node name="Cannon" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 17.5832, 0.304614 )
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
scale = Vector2( 1.44034, 1.35546 )
shape = SubResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="Detection" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( -0.135277, 0.0527402 )
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 2 )

[node name="CannonPosition" type="Position2D" parent="."]
position = Vector2( 9.71045, -0.225365 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
